Actualizado xml boton

--- a/static/description/index.html
+++ b/static/description/index.html
@@ -1,8 +1,6 @@
 <html>
     <body>
-        <h1>Control de cartera</h1>
-        <p>Modificación vista con campos calculados para visualizar
-            los totales de una venta (Base a Entregar, Excesos a facturar,
-            Hitos Pendientes, Base a facturar, Base Facturada), searchpanel y incluye N.º de contrato </p>
+        <h1>Módulo de gestión de Dossieres de Calidad</h1>
+        <p>Módulo para la creación y vinculación de workspaces con Pedidos de Venta</p>
     </body>
 </html>
